# MailTm

./: README.md  pyproject.toml  setup.py
src/mailtm/: email.py  listen.py  models.py
src/mailtmpy/: __init__.py  email.py  helpers.py  listen.py  models.py
