[tool.poetry]
name = "mailtm"
version = "0.1.0"
description = ""
authors = ["websmithcode <websmithcode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
